// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityCheckList actions should dispatch "CHECK_ALL" with timestamp "timestamp-2" 1`] = `
Array [
  Object {
    "timestamp": "timestamp-2",
    "type": "logbook.ActivityCheckList.CHECK_ALL",
  },
]
`

exports[`ActivityCheckList actions should dispatch "REMOVE_ALL" 1`] = `
Array [
  Object {
    "type": "logbook.ActivityCheckList.REMOVE_ALL",
  },
]
`

exports[`ActivityCheckList actions should dispatch "REMOVE_LIST_ITEM" with id "1" 1`] = `
Array [
  Object {
    "activityType": undefined,
    "id": "1",
    "type": "logbook.ActivityCheckList.REMOVE_LIST_ITEM",
  },
]
`

exports[`ActivityCheckList actions should dispatch "SET_ACTIVE_CHECKLIST" with timestamp "timestamp-3" 1`] = `
Array [
  Object {
    "timestamp": "timestamp-3",
    "type": "logbook.ActivityCheckList.SET_ACTIVE_CHECKLIST",
  },
]
`

exports[`ActivityCheckList actions should dispatch "SET_DEFAULT_LOG_VALUES" with timestamp "timestamp-3" 1`] = `
Array [
  Object {
    "activityTypes": undefined,
    "timestamp": "timestamp-3",
    "type": "logbook.ActivityCheckList.SET_DEFAULT_VALUES",
  },
]
`

exports[`ActivityCheckList actions should dispatch "TOGGLE_ITEM_CHECKBOX" with id "1" and timestamp "timestamp-1" 1`] = `
Array [
  Object {
    "createdAt": "timestamp-1",
    "id": "1",
    "type": "logbook.ActivityCheckList.TOGGLE_ITEM_CHECKBOX",
  },
]
`
